--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
         "express": "^4.17.1",
         "express-session": "^1.17.1",
         "flutterwave-node-v3": "^1.0.6",
+        "ftp-deploy": "^2.4.0",
         "hbs": "^4.1.1",
         "log-symbols": "^4.0.0",
         "mongoose": "^5.10.6",
         "multer": "^1.4.2",
+        "node-cron": "^2.0.3",
         "nodemailer": "^6.4.11",
         "onesignal-node": "^3.1.5",
         "play-sound": "^1.1.3",
