--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "ftp-deploy": "^2.4.0",
         "hbs": "^4.1.1",
         "log-symbols": "^4.0.0",
+        "mongodb-backup": "^1.6.9",
         "mongoose": "^5.10.6",
         "multer": "^1.4.2",
         "node-cron": "^2.0.3",
