--- a/package.json
+++ b/package.json
@@ -12,25 +12,33 @@
     "license": "ISC",
     "dependencies": {
         "africastalking": "^0.5.2",
+        "aws-sdk": "^2.819.0",
         "body-parser": "^1.19.0",
         "check-disk-space": "^2.1.0",
         "colors": "^1.4.0",
         "connect-mongo": "^3.2.0",
         "cookie-parser": "^1.4.5",
         "cron": "^1.8.2",
+        "dotenv": "^8.2.0",
         "dropbox": "^6.0.2",
         "express": "^4.17.1",
         "express-session": "^1.17.1",
         "flutterwave-node-v3": "^1.0.6",
+        "ftp-deploy": "^2.4.0",
         "hbs": "^4.1.1",
         "log-symbols": "^4.0.0",
         "mongoose": "^5.10.6",
         "multer": "^1.4.2",
+        "multer-ftp": "^1.2.0",
+        "multer-sftp": "^1.1.1",
         "nodemailer": "^6.4.11",
         "onesignal-node": "^3.1.5",
         "play-sound": "^1.1.3",
         "prompt": "^1.0.0",
-        "socket.io": "^2.3.0"
+        "queue": "^6.0.1",
+        "redis": "^3.0.2",
+        "socket.io": "^2.3.0",
+        "ssh2-sftp-client": "^6.0.0"
     },
     "devDependencies": {}
 }
