--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "multer-ftp": "^1.2.0",
         "multer-sftp": "^1.1.1",
         "nodemailer": "^6.4.11",
+        "nodemailer-express-handlebars-plaintext-inline-ccs": "^0.9.0",
         "onesignal-node": "^3.1.5",
         "play-sound": "^1.1.3",
         "prompt": "^1.0.0",
